--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -7,6 +7,10 @@
     <%= f.text_field :title, class: 'form-control' %>
    </div>
    <div class="form-group">
+    <%= f.label "商品画像" %><br>
+    <%= f.file_field :image, accept: "image/*" %>
+   </div>
+   <div class="form-group">
      <%= f.label "購入した目的・背景" %><br>
      <%= f.text_area :purpose, class: 'form-control' %>
    </div>
