--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -10,7 +10,7 @@
       %>
       <% end %>
       <%= form_with url: search_posts_path, local: true, method: :get, class: 'pl-3' do |f| %>
-        <%= select_tag :key_ascending, options_for_select("新しい順": "created_at asc", "古い順": "created_at desc", "高評価順": "star desc", "低評価順": "star asc"), include_blanc: true %>
+        <%= select_tag :key_ascending, options_for_select("新しい順": "created_at desc", "古い順": "created_at asc", "高評価順": "star desc", "低評価順": "star asc"), include_blanc: true %>
         <%= f.text_field :keyword %>
         <%= f.submit "検索" %>
       <% end %>
@@ -24,6 +24,7 @@
         <tr>
           <th style="background-color: #8EB8FF;"></th>
           <th style="background-color: #8EB8FF;">投稿者</th>
+          <th style="background-color: #8EB8FF;">商品画像</th>
           <th style="background-color: #8EB8FF;">商品名</th>
           <th style="background-color: #8EB8FF;">評価</th>
           <th style="background-color: #8EB8FF;">タグ</th>
@@ -35,14 +36,21 @@
         <tr>
           <td>
             <% if post.user.profile_image.attached? %>
-              <%= image_tag post.user.profile_image, size: "50x50" %>
+              <%= image_tag post.user.profile_image, size: "50x50", class: "rounded-circle" %>
             <% else %>
-              <%= image_tag 'no_image.jpg', size: "50x50" %>
+              <%= image_tag 'no_image.jpg', size: "50x50", class: "rounded-circle" %>
             <% end %>
           </td>
           <td>
             <%= link_to my_page_path(post.user_id) do %>
               <%= post.user.nickname %>
+            <% end %>
+          </td>
+          <td>
+            <% if post.image.attached? %>
+              <%= image_tag post.image, size: "100x100" %>
+            <% else %>
+              <%= image_tag 'no_images.jpg', size: "100x100" %>
             <% end %>
           </td>
           <td>
