--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -27,6 +27,7 @@
           <tr>
             <th style="background-color: #8EB8FF;"></th>
             <th style="background-color: #8EB8FF;">投稿者</th>
+            <th style="background-color: #8EB8FF;">商品画像</th>
             <th style="background-color: #8EB8FF;">商品名</th>
             <th style="background-color: #8EB8FF;">評価</th>
             <th style="background-color: #8EB8FF;">タグ</th>
@@ -44,6 +45,13 @@
             <% end %>
             </td>
             <td><%= post.user.nickname %></td>
+            <td>
+              <% if post.image.attached? %>
+                <%= image_tag post.image, size: "100x100" %>
+              <% else %>
+                <%= image_tag 'no_images.jpg', size: "100x100" %>
+              <% end %>
+          </td>
             <td>
               <%= link_to admin_post_path(post) do %>
                 <%= post.title %>
