--- a/app/views/admin/posts/search.html.erb
+++ b/app/views/admin/posts/search.html.erb
@@ -1,14 +1,16 @@
-<h1>検索結果</h1>
+<h2 style="text-align: center;">検索結果</h2>
 <div class="container">
   <div class="row">
     <table class="table">
       <thead>
         <tr>
-          <th></th>
-          <th>投稿者</th>
-          <th>商品名</th>
-          <th>評価</th>
-          <th>タグ</th>
+          <th style="background-color: #8EB8FF;"></th>
+          <th style="background-color: #8EB8FF;">投稿者</th>
+          <th style="background-color: #8EB8FF;">商品画像</th>
+          <th style="background-color: #8EB8FF;">商品名</th>
+          <th style="background-color: #8EB8FF;">評価</th>
+          <th style="background-color: #8EB8FF;">タグ</th>
+          <th style="background-color: #8EB8FF;">投稿日時</th>
         </tr>
       </thead>
       <tbody>
@@ -18,6 +20,13 @@
           <td>
             <%= link_to my_page_path(post.user_id) do %>
               <%= post.user.nickname %>
+            <% end %>
+          </td>
+          <td>
+            <% if post.image.attached? %>
+              <%= image_tag post.image, size: "100x100" %>
+            <% else %>
+              <%= image_tag 'no_images.jpg', size: "100x100" %>
             <% end %>
           </td>
           <td>
@@ -45,6 +54,7 @@
               <span><%= tag.name %></span>
             <% end %>
           </td>
+          <td><%= l post.created_at %></td>
         </tr>
        <% end %>
       </tbody>
