--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -3,14 +3,12 @@
   <div class="row">
     <div class="col-md-8">
       <div class="offset-4">
-        <%= form_tag admin_posts_path, method: :get, class: 'boards_searchForm' do %>
-          <%= select_tag :tag_id,options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
-                         {
-                           prompt: 'タグで絞り込み検索',
-                           onchange:'submit(this.form);'
-                         }
-          %>
-          <% end %>
+        <%= form_tag({controller:"posts",action:"index"}, method: :get) do %>
+            <% Tag.all.each do |p| %>
+                <li style="list-style: none; display: inline"><%= check_box :tag_ids, p.name %><%= p.name %></li>
+            <% end %>
+            <%= submit_tag '検索' %>
+        <% end %>
           <%= form_with url: search_admin_posts_path, local: true, method: :get do |f| %>
             <%= select_tag :key_ascending, options_for_select("新しい順": "created_at desc", "古い順": "created_at asc", "高評価順": "star desc", "低評価順": "star asc"), include_blanc: true %>
             <%= f.text_field :keyword %>
