--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,14 +1,12 @@
 <h2 class="pt-3 pb-3" style="text-align: center;">投稿一覧</h2>
 <div class="container">
   <div class="row">
-    <%= form_tag posts_path, method: :get, class: 'boards_searchForm' do %>
-      <%= select_tag :tag_id,options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
-                     {
-                       prompt: 'タグで絞り込み検索',
-                       onchange:'submit(this.form);'
-                     }
-      %>
-      <% end %>
+    <%= form_tag({controller:"posts",action:"index"}, method: :get) do %>
+        <% Tag.all.each do |p| %>
+            <li style="list-style: none; display: inline"><%= check_box :tag_ids, p.name %><%= p.name %></li>
+        <% end %>
+        <%= submit_tag '検索' %>
+    <% end %>
       <%= form_with url: search_posts_path, local: true, method: :get, class: 'pl-3' do |f| %>
         <%= select_tag :key_ascending, options_for_select("新しい順": "created_at desc", "古い順": "created_at asc", "高評価順": "star desc", "低評価順": "star asc"), include_blanc: true %>
         <%= f.text_field :keyword %>
